--- a/app/src/main/res/layout/bubble.xml
+++ b/app/src/main/res/layout/bubble.xml
@@ -45,15 +45,50 @@
         android:id="@+id/collapsed_bubble"
         app:layout_constraintTop_toBottomOf="@id/expanded_bubble"
         app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="3dp"
         >
+
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:id="@+id/gotUserName"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/bubble_logo"
+            app:layout_constraintStart_toEndOf="@id/gotUserId"
+            app:layout_constraintHorizontal_bias="1"
+            android:background="@drawable/circle_gray"
+            />
+
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:id="@+id/gotUserId"
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/circle_gray"
+            app:layout_constraintEnd_toStartOf="@id/gotUserName"
+            app:layout_constraintStart_toStartOf="@id/bubble_logo"
+            app:layout_constraintHorizontal_bias="0"
+            />
 
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:id="@+id/bubble_logo"
             android:src="@drawable/ic_logo"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/gotUserName"
             app:layout_constraintEnd_toEndOf="parent"
             android:contentDescription="@string/tajr_bubble"/>
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="@id/bubble_logo"
+            app:layout_constraintBottom_toBottomOf="@id/bubble_logo"
+            app:layout_constraintStart_toStartOf="@id/bubble_logo"
+            app:layout_constraintEnd_toEndOf="@id/bubble_logo"
+            android:elevation="5dp"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
