--- a/app/src/main/res/drawable/textview_selector.xml
+++ b/app/src/main/res/drawable/textview_selector.xml
@@ -4,16 +4,10 @@
     <item android:state_pressed="true"
         >
         <shape android:shape="rectangle">
-            <solid android:color="@color/blue"/>
+            <solid android:color="@color/gray"/>
         </shape>
     </item>
 
-    <item android:state_selected="true"
-        >
-        <shape android:shape="rectangle">
-            <solid android:color="@color/blue"/>
-        </shape>
-    </item>
 
 
 
