--- a/app/src/main/res/layout/bot_blocks_dialog.xml
+++ b/app/src/main/res/layout/bot_blocks_dialog.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="300dp"
-    android:layout_height="300dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     app:cardElevation="5dp"
     app:cardCornerRadius="15dp">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -52,6 +58,7 @@
             app:layout_constraintTop_toBottomOf="@+id/normal_header"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
+    </ScrollView>
 </androidx.cardview.widget.CardView>
+
+
