--- a/app/src/main/res/layout/layout_add_poduct_dialog.xml
+++ b/app/src/main/res/layout/layout_add_poduct_dialog.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="5dp"
     android:elevation="3dp">
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
 
 <RelativeLayout
     android:layout_width="match_parent"
@@ -24,11 +29,11 @@
             android:background="@color/main_color_600"
             android:gravity="center"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="2dp">
 
             <ImageView
-                android:layout_width="55dp"
-                android:layout_height="55dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:src="@drawable/ic_bags2" />
 
             <com.greyeg.tajr.helper.font.RobotoTextView
@@ -37,27 +42,118 @@
                 android:layout_height="wrap_content"
                 android:text="@string/add_product"
                 android:textColor="@color/white"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 app:typeface="robotoBlack" />
         </LinearLayout>
 
-        <Spinner
-            android:id="@+id/product_spinner"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="@dimen/_16ssp">
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/productImg"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="5dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/product" />
 
-        </Spinner>
+            <TextView
+                android:id="@+id/product_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black_text_color"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/productImg"
+                tools:text="@string/dummy_product"
+
+                />
+
+            <TextView
+                android:id="@+id/product_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/material_red_700"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/product_name"
+                tools:text="150 L.E"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/products"
+            android:textSize="18sp"
+            android:textColor="@color/calc_grey_500"
+            android:layout_marginStart="5dp"/>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardElevation="5dp"
+            android:layout_margin="5dp"
+            >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/products_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_180sdp"
+            >
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/products_PB"
+            android:layout_centerInParent="true"/>
+        </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/item_no"
+            android:textSize="18sp"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/calc_grey_500"
+            android:layout_marginStart="5dp"
+            />
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:elevation="5dp"
+            android:layout_margin="5dp"
+            >
+
 
         <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:inputType="number"
             android:id="@+id/product_no"
-            android:layout_marginBottom="@dimen/_16ssp"
-            android:layout_width="match_parent"
-            android:layout_marginStart="@dimen/_16ssp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_16ssp"
+            style="@style/oder_item_edit_text_style_editable"
+            android:layout_marginStart="@dimen/_5ssp"
+            android:layout_marginEnd="@dimen/_5ssp"
             android:hint="@string/item_no" />
+
+        </androidx.cardview.widget.CardView>
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -67,18 +163,26 @@
             android:textColor="@color/calc_grey_500"
             android:textStyle="bold"
             />
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:elevation="3dp"
+
+            >
+
+
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:id="@+id/extra_data_recycler"
-            android:layout_marginTop="5dp"
+            android:visibility="gone"
+            tools:visibility="visible"
             />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/colorPrimaryDark"
-            android:layout_marginTop="5dp"/>
+        </androidx.cardview.widget.CardView>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -93,8 +197,6 @@
                 android:layout_margin="8dp"
                 android:background="@drawable/selector_dialog_warning"
                 android:gravity="center"
-                android:minWidth="64dp"
-                android:padding="8dp"
                 android:text="@string/ok"
                 android:textColor="@color/main_color_600"
                 android:textSize="20sp"
@@ -113,4 +215,6 @@
         android:src="@drawable/ic_close_black_24dp"
         android:layout_alignParentEnd="true"/>
 </RelativeLayout>
+    </ScrollView>
+
 </androidx.cardview.widget.CardView>
